Environments/ObsoleteCENXFromARM/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachineName": {
            "defaultValue": "VM",
            "type": "String"
        },
        "numberOfEnvironments": {
            "type": "int",
            "defaultValue": 2,
            "minValue": 1,
            "maxValue": 5,
            "metadata": {
              "description": "Number of environments to deploy."
            }
        },
        "adminUsername": {
            "type": "string",
            "defaultValue": "qmajohn",
            "metadata": {
                "description": "Username for the Virtual Machine."
            }
        },
        "authenticationType": {
            "type": "string",
            "defaultValue": "password",
            "allowedValues": [
                "sshPublicKey",
                "password"
            ],
            "metadata": {
                "description": "Type of authentication to use on the Virtual Machine. SSH key is recommended."
            }
        },
        "adminPasswordOrKey": {
            "type": "securestring",
            "metadata": {
                "description": "SSH Key or password for the Virtual Machine. SSH key is recommended."
            }
        }
    },
    "variables": {
        "virtualNetworkName": "VNet",
        "networkInterfaceName": "NIC",
        "publicIPAddressIPName": "PIP",
        "networkSecurityGroupNSGName": "NSG",
        "galleries_CENX_SIG_externalid": "/subscriptions/a2e63101-6274-4190-a9a0-b238157993cb/resourceGroups/CENX-SIG/providers/Microsoft.Compute/galleries/CENX_SIG",
        "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
                "publicKeys": [
                    {
                        "path": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]",
                        "keyData": "[parameters('adminPasswordOrKey')]"
                    }
                ]
            }
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "name": "[variables('networkSecurityGroupNSGName')]",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-11-01",
            "name": "[concat(variables('publicIPAddressIPName'),copyindex())]",
            "location": "westeurope",
            "copy": {
                "name": "PIPLoop",
                "count": "[parameters('numberOfEnvironments')]"
              },
           
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "name": "[concat(variables('virtualNetworkName'),copyindex())]",
            "location": "westeurope",
            "copy": {
                "name": "VNetLoop",
                "count": "[parameters('numberOfEnvironments')]"
              },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.19.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.0.19.0/24",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-11-01",
            "name": "[concat(variables('networkSecurityGroupNSGName'), '/SSH')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupNSGName'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2019-11-01",
            "name": "[concat(variables('virtualNetworkName'),copyindex(),'/default')]",
            "copy": {
                "name": "subnetLoop",
                "count": "[parameters('numberOfEnvironments')]"
              },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', concat(variables('virtualNetworkName'),copyindex()))]"
            ],
            "properties": {
                "addressPrefix": "10.0.19.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "name": "[concat(parameters('virtualMachineName'),copyindex())]",
            "location": "westeurope",
            "copy": {
                "name": "VMLoop",
                "count": "[parameters('numberOfEnvironments')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('networkInterfaceName'),copyindex()))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[concat(variables('galleries_CENX_SIG_externalid'), '/images/CentOS7LVMImg1')]"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachineName'),copyindex(), '_OsDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                        }
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[concat(parameters('virtualMachineName'),copyindex())]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPasswordOrKey')]",
                    "linuxConfiguration": "[if(equals(parameters('authenticationType'), 'password'), json('null'), variables('linuxConfiguration'))]"
                    }
            ,
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('networkInterfaceName'),copyindex()))]"
                        }
                    ]
                }
            }
        } ,
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "name": "[concat(variables('networkInterfaceName'),copyindex())]",
            "location": "westeurope",
            "copy": {
                "name": "nicLoop",
                "count": "[parameters('numberOfEnvironments')]"
              },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPAddressIPName'),copyindex()))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', concat(variables('virtualNetworkName'),copyindex()), 'default')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupNSGName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.19.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPAddressIPName'),copyindex()))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', concat(variables('virtualNetworkName'),copyindex()), 'default')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupNSGName'))]"
                }
            }
        }
    ],
    "outputs": {
        "publicIPs": {
          "type": "array",
          "copy": {
            "count": "[parameters('numberOfEnvironments')]",
            "input": "[reference(resourceId('Microsoft.Network/publicIPAddresses', concat(variables('publicIPAddressIPName'),copyindex()))).ipAddress]"
          }
        }
      }
}
